--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,4 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+<% include layout.ejs %>
+<h1><%= title %></h1>
+<p>Welcome to <%=title%></p>
+<% include footer.ejs %>
