--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,5 @@
-<% include layout.ejs %>
+<% include layout %>
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
-<% include footer.ejs %>
+<% include footer %>
